# rust-sessions

./: Cargo.toml  README.md
Readme/: pointer.md
src/: collections.rs  constructor.rs  float.rs  fp.md  generics.rs  main.rs  pointer.md  signed.rs  string.rs  todo.rs  unsigned.rs  user_struct.rs
src/backend/: Cargo.toml  main.rs
src/backend/src/: main.rs
src/backend/src/routes/: handle_create_name.rs  handle_formatted_name.rs  handle_name.rs  mod.rs  weather.rs
tasks/: retrive_weather.md
