[package]
name = "proj_14_03_25"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = []}
dotenv = "0.15.0"
reqwest = {version="0.12.14", features = ["json"]}
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
